# laughing-man

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  laughing-man.py  laughing_man.py  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml  release.yml
docs/: ARCHITECTURE.md
docs/proposals/: face-detection-multi-angle-proposal.md
scripts/: magenta_to_alpha.py
src/laughing_man/: __init__.py  __version__.py  bootstrap.py  box_tracking.py  camera.py  cascade.py  cli.py  cli_options.py  constants.py  deps.py  detection.py  logging_setup.py  model.py  overlay.py  postprocess.py  privacy.py  protocols.py  roi.py  run.py  tuning.py  yunet_face.py
src/laughing_man/assets/: __init__.py
tests/: test_box_tracking.py  test_camera.py  test_cascade.py  test_cascaded_source.py  test_cli.py  test_cli_typer_regression.py  test_overlay.py  test_postprocess.py  test_version.py
