[project]
name = "laughing-man"
version = "0.1.0"
description = "Webcam Laughing Man face overlay (MediaPipe + OpenCV + Pillow)"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "mediapipe>=0.10.33",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pyvirtualcam>=0.15.0",
    "typer>=0.24.1",
]

[project.scripts]
laughing-man = "laughing_man:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/laughing_man"]

# uv defaults to hardlinks from its cache; when cache and .venv are on different
# devices, that can fail silently and leave broken wheels (e.g. cv2 without
# VideoCapture). Copying avoids incomplete OpenCV installs.
[tool.uv]
link-mode = "copy"

[dependency-groups]
dev = [
    "commitizen>=4.13.10",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "ty>=0.0.29",
]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# Core correctness + import order. Typer CLIs intentionally use ``Option``/``Argument``
# in defaults (ruff B008); avoid stylistic rules that fight framework patterns.
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# ``cli.py`` re-exports Typer annotations from ``cli_options`` via star import.
"src/laughing_man/cli.py" = ["F403", "F405"]

[tool.ty]
# Enables project discovery; see https://docs.astral.sh/ty/configuration/

[tool.ty.environment]
# Match `requires-python` lower bound so stdlib and syntax checks align with support.
python-version = "3.10"
# Code uses platform-specific branches (e.g. ``msvcrt`` on Windows).
python-platform = "all"

[tool.ty.src]
include = ["src", "tests", "scripts"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:^version",
]
post_bump_hooks = ["uv lock"]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
changelog_merge_prereleases = true
bump_message = "chore(release): v$new_version [skip ci]"
